--- a/onasite/mysite/templates/base.html
+++ b/onasite/mysite/templates/base.html
@@ -2,7 +2,6 @@
 
 <!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}">
-
 <head>
 
     <meta charset="utf-8">
@@ -13,7 +12,7 @@
 
     <title>
         {% block title %}
-        {% page_attribute "page_title" %} - {{ request.site.name }}
+            {% page_attribute "page_title" %} - {{ request.site.name }}
         {% endblock title %}
     </title>
     <!-- Bootstrap Core CSS -->
@@ -32,23 +31,29 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+
     <!-- django CMS -->
     {% render_block "css" %}
 
+
     <!-- django CMS toolbar adjustment -->
     {% if request.toolbar %}
-    <style>
-        .cms-toolbar-expanded .navbar-custom {
-            margin-top: 45px;
-        }
-    </style>
+        <style>
+            .cms-toolbar-expanded .navbar-custom {
+                margin-top: 45px;
+            }
+        </style>
     {% endif %}
+
 </head>
 
 <body>
+
+
 <!-- django CMS Toolbar -->
 {% cms_toolbar %}
 <!-- Navigation -->
@@ -75,21 +80,23 @@
     <!-- /.container -->
 </nav>
 
-<!-- Page Header -->
-{% placeholder header or %}
-<!-- Set your background image for this header on the line below. -->
-<header class="intro-header" style="background-image: url({% static 'img/about-bg.jpg' %})">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <div class="page-heading">
-                    <h1>{% page_attribute "page_title" %}</h1>
+<!-- Page Header  -->
+{% block header %}
+    {% placeholder header or %}
+        <!-- Set your background image for this header on the line below. -->
+        <header class="intro-header" style="background-image: url({% static 'img/about-bg.jpg' %})">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                        <div class="page-heading">
+                            <h1>{% page_attribute "page_title" %}</h1>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-</header>
-{% endplaceholder %}
+        </header>
+    {% endplaceholder %}
+{% endblock %}
 
 <!-- Main Content -->
 <div class="container">
@@ -151,8 +158,11 @@
 
 <!-- Theme JavaScript -->
 <script src="{% static 'js/clean-blog.min.js' %}"></script>
+
 <!-- django CMS -->
 {% render_block "js" %}
+
+
 </body>
 
 </html>
