--- a/onasite/mysite/templates/base.html
+++ b/onasite/mysite/templates/base.html
@@ -66,7 +66,7 @@
                 <span class="sr-only">Toggle navigation</span>
                 Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="/">{{ request.site.name }}</a>
+            <a class="navbar-brand" href="/">osama.me</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
